--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>This application is build in the back-end by using two APIs which are:
+        <p>This application is built in the back-end by using two APIs which are:
             <ul>
                 <li>
                     MapBox API that takes a location as a city for example and return the longtidue and the latitude of this location.
