--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,7 +14,7 @@
         <p>This application is built in the back-end by using two APIs which are:
             <ul>
                 <li>
-                    MapBox API that takes a location as a city for example and return the longitdue and the latitude of this location.
+                    MapBox API that takes a location as a city for example and return the longitude and latitude of this location.
                 </li>
                 <li>
                     DarkSky API that takes the longitute and the latitude of a location and return the forecast data for this location.
