--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,10 +14,10 @@
         <p>This application is built in the back-end by using two APIs which are:
             <ul>
                 <li>
-                    MapBox API that takes a location as a city for example and return the longitude and latitude of this location.
+                    Mapbox API that takes a location as a city for example and return the longitude and latitude of this location.
                 </li>
                 <li>
-                    DarkSky API that takes the longitute and the latitude of a location and return the forecast data for this location.
+                    Dark Sky API that takes the longitude and latitude of a location and return the forecast data for this location.
                 </li>
             </ul>
         </p>
